--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       display: none;
     }
 
-    /* Prevent titles, platform highlight block, and rating stars from spilling out */
     h3, .platform-block {
       white-space: nowrap;
       overflow: hidden;
@@ -98,7 +97,6 @@
         const title = document.createElement('h3');
         title.className = 'text-2xl font-semibold text-gray-100 drop-shadow';
         title.textContent = mod.title;
-        // prevent line break + overflow
         title.style.whiteSpace = 'nowrap';
         title.style.overflow = 'hidden';
         title.style.textOverflow = 'ellipsis';
@@ -110,7 +108,6 @@
         titleRow.appendChild(title);
         titleRow.appendChild(rating);
 
-        // standalone
         const standaloneDiv = document.createElement('div');
         standaloneDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2';
 
@@ -148,10 +145,8 @@
         }
 
         standaloneWrapper.appendChild(noSpan);
-
         standaloneDiv.appendChild(standaloneWrapper);
 
-        // Platform
         const platformDiv = document.createElement('div');
         platformDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2 platform-block';
         platformDiv.style.whiteSpace = 'nowrap';
@@ -243,7 +238,6 @@
       return starsHTML;
     }
 
-    // Popup code - dynamic content loading without iframe
     const overlay = document.getElementById('popup-overlay');
     const popupContent = document.getElementById('popup-content');
     const popupClose = document.getElementById('popup-close');
@@ -270,14 +264,12 @@
       if (e.target === overlay) overlay.classList.add('hidden');
     });
 
-    // Sorting and searching
     document.getElementById('sort-button').addEventListener('click', () => {
       sorted = !sorted;
       const toRender = sorted
         ? [...mods].sort((a, b) => (b.rating || 0) - (a.rating || 0))
         : originalMods;
       renderMods(toRender);
-      document.getElementById('sort-button').textContent = sorted ? 'Unsort' : 'Sort by Rating';
     });
 
     document.getElementById('search-input').addEventListener('input', e => {
@@ -290,11 +282,11 @@
       renderMods(filtered);
     });
 
-    // Toggle videos visibility
-    document.getElementById('toggle-videos').addEventListener('click', () => {
+    const toggleBtn = document.getElementById('toggle-videos');
+    toggleBtn.addEventListener('click', () => {
       document.body.classList.toggle('hide-videos');
-      const btn = document.getElementById('toggle-videos');
-      btn.textContent = btn.textContent === 'Hide Videos' ? 'Show Videos' : 'Hide Videos';
+      const hidden = document.body.classList.contains('hide-videos');
+      toggleBtn.textContent = hidden ? 'Show Videos' : 'Hide Videos';
     });
 
     loadMods();
