--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -14,11 +14,10 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Step 1: Download all files.</li>
-      <li>Step 2: Extract to game directory.</li>
-      <li>Step 3: Apply patches if needed.</li>
-      <li>Step 4: Launch using provided launcher.</li>
-      <li>Step 5: Check mod settings for tweaks.</li>
+      <li>Step 1: Extract Archive, move game folder to the root of your drive.</li>
+      <li>Step 2: Launch XR_3DA.exe in the bin folder.</li>
+      <li>Step 3: (optional) Run JSGME.exe and add addons you want.</li>
+      <li>Step 4: (optional) Add the Vector Weapon Pack.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
