--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -14,10 +14,10 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Step 1: Extract Archive, move game folder to the root of your drive.</li>
-      <li>Step 2: Launch XR_3DA.exe in the bin folder.</li>
-      <li>Step 3: (optional) Run JSGME.exe and add addons you want.</li>
-      <li>Step 4: (optional) Add the Vector Weapon Pack.</li>
+      <li>Extract Archive, move game folder to the root of your drive.</li>
+      <li>Launch XR_3DA.exe in the bin folder.</li>
+      <li>(optional) Run JSGME.exe and add addons you want.</li>
+      <li>(optional) Add the Vector Weapon Pack.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
@@ -25,11 +25,11 @@
     <h2 class="text-xl font-semibold mb-2">Links</h2>
     <p class="text-gray-300 mb-1">
       Moddb Original Page: 
-      <a href="https://moddb.com" target="_blank" class="text-blue-400 hover:underline">https://moddb.com</a>
+      <a href="https://www.moddb.com/mods/olr-vector-of-alienation" target="_blank" class="text-blue-400 hover:underline">Vector of Alienation</a>
     </p>
     <p class="text-gray-300 mb-1">
       Ap-pro Original Page: 
-      <a href="https://ap-pro.net" target="_blank" class="text-blue-400 hover:underline">https://ap-pro.net</a>
+      <a href="https://ap-pro.ru/stuff/ten_chernobylja/vektor-otchuzhdeniya-r158/" target="_blank" class="text-blue-400 hover:underline">Вектор Отчуждения</a>
     </p>
     <p class="text-gray-300 mb-6">
       Translation Original Page: 
