--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -31,31 +31,24 @@
       Ap-pro Original Page: 
       <a href="https://ap-pro.ru/stuff/ten_chernobylja/vektor-otchuzhdeniya-r158/" target="_blank" class="text-blue-400 hover:underline">Вектор Отчуждения</a>
     </p>
-    <p class="text-gray-300 mb-6">
-      Translation Original Page: 
-      <a href="https://translation.com" target="_blank" class="text-blue-400 hover:underline">https://translation.com</a>
-    </p>
     <hr class="border-gray-600 mb-6">
 
     <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators:</h3>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators</h3>
     <p class="text-gray-300 mb-2">
-      Creator Name: 
-      <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
+     Dorian23Grey
     </p>
 
     <h3 class="font-semibold text-gray-200 mb-1">Translation:</h3>
     <p class="text-gray-300 mb-2">
-      Translator Name: 
-      <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
+      Chocohex 
     </p>
 
     <h3 class="font-semibold text-gray-200 mb-1">Additional Credits:</h3>
     <p class="text-gray-300 mb-2">
-      Tester Name: 
-      <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
+      Oblivion Lost Remake team, Hi_Flyer, Domestos, Macron
     </p>
   </div>
 </body>
