--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -38,24 +38,24 @@
 
 <h3 class="font-semibold text-gray-200 mb-1">Mod Creators</h3>
 <p class="text-gray-300 mb-2">
- Dorian23Grey
+ - Dorian23Grey
 </p>
 
 <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
 <p class="text-gray-300 mb-2">
-  Chocohex 
+  - Chocohex 
 </p>
 
 <h3 class="font-semibold text-gray-200 mb-1">Additional Credits</h3>
 <p class="text-gray-300 mb-2">
-  Oblivion Lost Remake Team, Hi_Flyer, Domestos, Macron
+  - Oblivion Lost Remake Team, Hi_Flyer, Domestos, Macron
 </p>
 <p class="text-gray-300 mb-2">
-  AMK Team, Shadows, Scavenger, Vincent Vega, RuWar, Dez0Wave Team, Zaurus, Maxim R., cOldSnake, LafuGix, OGSE team, Starleigh, Chriotmao, Amik
+  - AMK Team, Shadows, Scavenger, Vincent Vega, RuWar, Dez0Wave Team, Zaurus, Maxim R., cOldSnake, LafuGix, OGSE team, Starleigh, Chriotmao, Amik
 </p>
 <p class="text-gray-300">
-  C-Consciousness Discord & Moddb Group: 
-  <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">https://www.moddb.com/groups/c-consciousness</a>
+  - C-Consciousness Discord & Moddb Group: 
+  <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">C-Consciousness</a>
 </p>
 
   </div>
