--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -36,7 +36,7 @@
     <!-- Credits Section -->
 <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-<h3 class="font-semibold text-gray-200 mb-1">Mod Creators</h3>
+<h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
 <p class="text-gray-300 mb-2">
  - Dorian23Grey
 </p>
